# Code-Fixer-LLM-Agent

./: .gitignore  README.md  missing_colon.py  requirements.txt
.ipynb_checkpoints/: llama3-checkpoint.ipynb
CPP_Compiler/: CMakeLists.txt  hello.py  main.cpp
CPP_Compiler/lexer/: FileReader.cpp  FileReader.h  Lexer.cpp  Lexer.h
CPP_Compiler/parser/: Parser.cpp  Parser.h
fine-tuning-LLM/: .gitignore  5_3_QLoRA_Tuning.ipynb  fineTunning.ipynb  links  loadLangchainModel.ipynb  requirements.txt  unsloth-fine-tuning.ipynb
fine-tuning-LLM/.neptune/async/run__9eda1a70-09fb-4fbf-b7a0-b7016dca94e4__10404__d0ivnztw/: metadata.json
fine-tuning-LLM/.neptune/async/run__9eda1be9-4e36-41d1-a433-0148ffcc957b__25720__d0ivnztw/: metadata.json
fine-tuning-LLM/.neptune/async/run__9eda23b9-2006-44a8-858e-4a069006ca9a__6404__d0ivnztw/: metadata.json
fine-tuning-LLM/outputs/checkpoint-100/: adapter_config.json  scheduler.pt  trainer_state.json
fine-tuning-LLM/unsloth_compiled_cache/: BatchNorm1d.py  ConvTranspose1d.py  ConvTranspose2d.py  ConvTranspose3d.py  RMSNorm.py  unsloth_compiled_module_qwen3.py
